--- a/.env
+++ b/.env
@@ -4,14 +4,14 @@ APP_NAME=stackfood1649727312APP_ENV=live
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
                     APP_MODE=live
-                    APP_URL=http://phplaravel-762910-2583603.cloudwaysapps.com/
+                    APP_URL=http://localhost/PlasterPlus
 
                     DB_CONNECTION=mysql
                     DB_HOST=localhost
                     DB_PORT=3306
-                    DB_DATABASE=buqmymnhfz
-                    DB_USERNAME=buqmymnhfz
-                    DB_PASSWORD=rZ9ffgNfu4
+                    DB_DATABASE=Plaster
+                    DB_USERNAME=PlasterUser
+                    DB_PASSWORD=P@74123
 
                     BROADCAST_DRIVER=log
                     CACHE_DRIVER=file
