--- a/.env
+++ b/.env
@@ -4,14 +4,14 @@ APP_NAME=stackfood1649727312APP_ENV=live
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
                     APP_MODE=live
-                    APP_URL=http://localhost/PlasterPlus
+                    APP_URL=http://178.62.192.70/
 
                     DB_CONNECTION=mysql
-                    DB_HOST=localhost
+                    DB_HOST=178.62.192.70
                     DB_PORT=3306
-                    DB_DATABASE=Plaster
-                    DB_USERNAME=PlasterUser
-                    DB_PASSWORD=P@74123
+                    DB_DATABASE=mgxqrfuuka
+                    DB_USERNAME=mgxqrfuuka
+                    DB_PASSWORD=S9XWu7GY9y
 
                     BROADCAST_DRIVER=log
                     CACHE_DRIVER=file
