--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
-APP_NAME=stackfood1649727312APP_ENV=live
-                    APP_KEY=base64:SoUYHF2aQpGZ0kfp00ghSb7AkdJkj5y4GUxKLzTwVJQ=
+                    APP_NAME=Plaster
                     APP_DEBUG=true
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
                     APP_MODE=live
-                    APP_URL=http://localhost/
+                    APP_URL=http://localhost
 
                     DB_CONNECTION=mysql
                     DB_HOST=localhost
@@ -28,8 +27,6 @@ APP_NAME=stackfood1649727312APP_ENV=live
                     PUSHER_APP_SECRET=
                     PUSHER_APP_CLUSTER=mt1
 
-                    PURCHASE_CODE=e7f446d4-375c-4d62-bf4b-ae23bc8d1738
-                    BUYER_USERNAME=alraiescom
-                    SOFTWARE_ID=MzM1NzE3NTA=
+
 
                     SOFTWARE_VERSION=5.3
