--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-                    APP_NAME=Plaster
+APP_NAME=stackfood1649727312APP_ENV=live
+                    APP_KEY=base64:SoUYHF2aQpGZ0kfp00ghSb7AkdJkj5y4GUxKLzTwVJQ=
                     APP_DEBUG=true
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
