--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=stackfood1649727312APP_ENV=live
                     APP_KEY=base64:SoUYHF2aQpGZ0kfp00ghSb7AkdJkj5y4GUxKLzTwVJQ=
-                    APP_DEBUG=true
+                    APP_DEBUG=false
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
                     APP_MODE=live
