--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-APP_NAME=stackfood1649727312APP_ENV=live
+APP_NAME=stackfood1649727312
+APP_ENV=live
                     APP_KEY=base64:SoUYHF2aQpGZ0kfp00ghSb7AkdJkj5y4GUxKLzTwVJQ=
                     APP_DEBUG=false
                     APP_INSTALL=true
@@ -30,4 +31,4 @@ APP_NAME=stackfood1649727312APP_ENV=live
 
 
 
-                    SOFTWARE_VERSION=5.3
+                    SOFTWARE_VERSION=6.3
