--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=stackfood1649727312
 APP_ENV=live
                     APP_KEY=base64:SoUYHF2aQpGZ0kfp00ghSb7AkdJkj5y4GUxKLzTwVJQ=
-                    APP_DEBUG=false
+                    APP_DEBUG=true
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
                     APP_MODE=live
