--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-APP_NAME=stackfood1649727312
-APP_ENV=live
+APP_NAME=stackfood1649727312APP_ENV=live
                     APP_KEY=base64:SoUYHF2aQpGZ0kfp00ghSb7AkdJkj5y4GUxKLzTwVJQ=
-                    APP_DEBUG=false
+                    APP_DEBUG=true
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
                     APP_MODE=live
@@ -10,9 +9,9 @@ APP_ENV=live
                     DB_CONNECTION=mysql
                     DB_HOST=localhost
                     DB_PORT=3306
-                    DB_DATABASE=mgxqrfuuka
-                    DB_USERNAME=mgxqrfuuka
-                    DB_PASSWORD=S9XWu7GY9y
+                    DB_DATABASE=Plaster
+                    DB_USERNAME=root
+                    DB_PASSWORD=
 
                     BROADCAST_DRIVER=log
                     CACHE_DRIVER=file
@@ -29,6 +28,6 @@ APP_ENV=live
                     PUSHER_APP_SECRET=
                     PUSHER_APP_CLUSTER=mt1
 
+ASSET_URL=http://192.168.0.139/plasterplus/public
 
-
-                    SOFTWARE_VERSION=6.3
+                    SOFTWARE_VERSION=5.3
